hphp/hack/test/typecheck/named_parameters/named_params_fn_types_4.php.exp
ERROR: File "named_params_fn_types_4.php", line 6, characters 13-33:
Invalid argument (Typing[4040])
  File "named_params_fn_types_4.php", line 6, characters 13-33:
  Missing required named parameter: y
  File "named_params_fn_types_4.php", line 4, characters 20-67:
  Because of this definition
ERROR: File "named_params_fn_types_4.php", line 12, characters 13-50:
Invalid argument (Typing[4041])
  File "named_params_fn_types_4.php", line 12, characters 13-50:
  Unexpected named parameter: y
  File "named_params_fn_types_4.php", line 10, characters 20-50:
  Because of this definition
ERROR: File "named_params_fn_types_4.php", line 18, characters 13-37:
Invalid argument (Typing[4040])
  File "named_params_fn_types_4.php", line 18, characters 13-37:
  Missing required named parameter: x
  File "named_params_fn_types_4.php", line 16, characters 20-50:
  Because of this definition
ERROR: File "named_params_fn_types_4.php", line 18, characters 13-37:
Invalid argument (Typing[4041])
  File "named_params_fn_types_4.php", line 18, characters 13-37:
  Unexpected named parameter: wrong
  File "named_params_fn_types_4.php", line 16, characters 20-50:
  Because of this definition
ERROR: File "named_params_fn_types_4.php", line 24, characters 13-54:
Invalid argument (Typing[4040])
  File "named_params_fn_types_4.php", line 24, characters 13-54:
  Missing required named parameter: b
  File "named_params_fn_types_4.php", line 22, characters 20-67:
  Because of this definition
ERROR: File "named_params_fn_types_4.php", line 24, characters 13-54:
Invalid argument (Typing[4041])
  File "named_params_fn_types_4.php", line 24, characters 13-54:
  Unexpected named parameter: wrong
  File "named_params_fn_types_4.php", line 22, characters 20-67:
  Because of this definition
ERROR: File "named_params_fn_types_4.php", line 30, characters 13-50:
Invalid argument (Typing[4040])
  File "named_params_fn_types_4.php", line 30, characters 13-50:
  Missing required named parameters: y, x
  File "named_params_fn_types_4.php", line 28, characters 20-67:
  Because of this definition
ERROR: File "named_params_fn_types_4.php", line 30, characters 13-50:
Invalid argument (Typing[4041])
  File "named_params_fn_types_4.php", line 30, characters 13-50:
  Unexpected named parameters: q, p
  File "named_params_fn_types_4.php", line 28, characters 20-67:
  Because of this definition
ERROR: File "named_params_fn_types_4.php", line 36, characters 13-49:
Invalid argument (Typing[4040])
  File "named_params_fn_types_4.php", line 36, characters 13-49:
  Missing required named parameters: c, b
  File "named_params_fn_types_4.php", line 34, characters 20-82:
  Because of this definition
ERROR: File "named_params_fn_types_4.php", line 36, characters 13-49:
Invalid argument (Typing[4041])
  File "named_params_fn_types_4.php", line 36, characters 13-49:
  Unexpected named parameter: d
  File "named_params_fn_types_4.php", line 34, characters 20-82:
  Because of this definition
ERROR: File "named_params_fn_types_4.php", line 42, characters 13-33:
Invalid argument (Typing[4341])
  File "named_params_fn_types_4.php", line 42, characters 13-33:
  Named parameter x is required but expected to be optional
  File "named_params_fn_types_4.php", line 40, characters 20-59:
  Because of this definition
